<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="258dp">

        <!-- User Image -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="125dp"
            android:layout_height="121dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="250dp"

            app:layout_constraintBottom_toTopOf="@+id/replaceImageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <RelativeLayout
                    android:id="@+id/rel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/generatedimage" />

                    <TextView
                        android:id="@+id/textOnImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLength="4"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>


        <!-- Username -->

        <TextView
            android:id="@+id/usernameTextViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Charlie Kim"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/replaceImageButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/replaceImageButton"
            android:layout_width="140dp"
            android:layout_height="41dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/purple"
            android:drawableStart="@drawable/ic_editbutton_image"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="Replace"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.834" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteImageButton"
            android:layout_width="140dp"
            android:layout_height="41dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/purple"
            android:drawableStart="@drawable/ic_editbutton_image"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="Delete"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.834" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editUsernameButton"
            android:layout_width="39dp"
            android:layout_height="34dp"
            android:layout_margin="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/purple"
            android:drawableStart="@drawable/ic_editbutton_image"
            android:src="@drawable/ic_editbutton_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/usernameTextViewProfile" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Homepage -->

        <!-- Email -->

        <!-- Phone Number -->

        <!-- Geolocation Tracking Switch -->

        <!-- Edit buttons for each field -->

        <TextView
            android:id="@+id/homepageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="64px"
            app:layout_constraintBottom_toTopOf="@+id/emailEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="64px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />

        <TextView
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="64px"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintVertical_bias="0.074" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/UsergeolocationSwitch"
            android:layout_width="364dp"
            android:layout_height="38dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:text="Enable Geolocation Tracking"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneEditText"
            app:thumbTint="@color/white"
            app:trackTint="@color/purple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Home Page:"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/homepageEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Email:"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homepageEditText"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="Phone Number:"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/AdminTextViewOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Admin View"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UsergeolocationSwitch" />

        <Button
            android:id="@+id/admin_open_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="#f96161"
            android:text="Admin Open"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/QRbutton"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UsergeolocationSwitch"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/QRbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="64dp"
            android:text="Scan Details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UsergeolocationSwitch"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>