<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Notifications"
        android:id="@+id/AttendeeNotifications"
        android:icon="@drawable/ic_event_notify"/>
    <item android:title="Profile"
        android:id="@+id/AttendeeProfile"
        android:icon="@drawable/ic_userprofile"/>
    <item android:title="Details"
        android:id="@+id/AttendeeDetails"
        android:icon="@drawable/ic_event_details"/>
    <item android:title="Go-Back"
        android:id="@+id/AttendeeGoBack"
        android:icon="@drawable/ic_go_back"/>
</menu>