<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Explore Events"
        android:id="@+id/ExploreEventNav"
        android:icon="@drawable/ic_explore_events"/>
    <item android:title="Organize Events"
        android:id="@+id/OrganizeEventNav"
        android:icon="@drawable/outline_category_24"/>
    <item android:title="Saved Events"
        android:id="@+id/SavedEventNav"
        android:icon="@drawable/ic_saved_events"/>
    <item android:title="Profile"
        android:id="@+id/UserProfileNav"
        android:icon="@drawable/ic_userprofile"/>
</menu>