...
                android:textSize="9sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ExploreEventDetialsButton"
                android:layout_width="140dp"
                android:layout_height="41dp"
                android:layout_margin="16dp"
                android:backgroundTint="@color/purple"
                android:drawableEnd="@drawable/ic_buttonarrow"
                android:drawablePadding="8dp"
...
